--- a/WalletWasabi.Fluent/Views/Wallets/Advanced/WalletCoins/Columns/LabelsColumnView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Advanced/WalletCoins/Columns/LabelsColumnView.axaml
@@ -13,7 +13,8 @@
                            VerticalAlignment="Stretch"
                            VerticalContentAlignment="Center"
                            HorizontalContentAlignment="Left"
-                           Margin="0 0 7 0">
+                           Margin="0 0 7 0"
+                           UseOpacity="False">
     <c:LabelsItemsPresenter Items="{Binding SmartLabel}" />
   </c:PrivacyContentControl>
 </UserControl>
