--- a/WalletWasabi.Fluent/Views/Wallets/Home/History/Columns/IndicatorsColumnView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/History/Columns/IndicatorsColumnView.axaml
@@ -1,4 +1,4 @@
-﻿<UserControl xmlns="https://github.com/avaloniaui"
+<UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -34,7 +34,7 @@
     </Panel>
 
     <!-- Type -->
-    <c:PrivacyContentControl PrivacyReplacementMode="Icon">
+    <c:PrivacyContentControl PrivacyReplacementMode="Icon" UseOpacity="False">
       <c:PrivacyContentControl.Styles>
         <Style Selector="c|PrivacyContentControl /template/ Viewbox#PART_Icon">
           <Setter Property="Opacity" Value="0.6" />
@@ -49,6 +49,5 @@
                   IsVisible="{Binding IsCoinJoin}" />
       </Panel>
     </c:PrivacyContentControl>
-
   </StackPanel>
 </UserControl>
