--- a/WalletWasabi.Fluent/Views/Wallets/Receive/Columns/LabelsColumnView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Receive/Columns/LabelsColumnView.axaml
@@ -10,7 +10,8 @@
              x:Class="WalletWasabi.Fluent.Views.Wallets.Receive.Columns.LabelsColumnView">
   <DockPanel LastChildFill="True" Margin="10 0 30 0">
     <c:PrivacyContentControl PrivacyReplacementMode="Text" NumberOfPrivacyChars="15"
-                             VerticalAlignment="Center">
+                             VerticalAlignment="Center"
+                             UseOpacity="False">
       <DockPanel LastChildFill="False">
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center"
                     Margin="0 0 0 0" Spacing="5" Orientation="Horizontal"
