Integrate dialog in TransactionPreview

--- a/WalletWasabi.Fluent/Views/Wallets/Send/TransactionSummary.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Send/TransactionSummary.axaml
@@ -12,8 +12,11 @@
 
     <!-- Amount -->
     <c:PreviewItem Icon="{StaticResource btc_logo}"
-                   Label="a total of">
-      <TextBlock Classes="monoSpaced" Text="{Binding AmountText, FallbackValue=_ BTC (≈_ USD)}" />
+                   Label="a total of" HorizontalContentAlignment="Stretch">
+      <StackPanel Orientation="Horizontal">
+        <TextBlock Classes="monoSpaced" Text="{Binding AmountText, FallbackValue=_ BTC (≈_ USD)}" />
+        <Button IsVisible="{Binding IsCoinControlVisible}" Command="{Binding SelectCoinsCommand}" Content="Review coins" Margin="10 0" VerticalAlignment="Center" />
+      </StackPanel>
     </c:PreviewItem>
     <Separator />
 
