--- a/WalletWasabi.Fluent/Views/Wallets/Send/TransactionPreviewView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Send/TransactionPreviewView.axaml
@@ -19,6 +19,11 @@
                  EnableSkip="{Binding PreferPsbtWorkflow}" SkipContent="Send Now"
                  IsBusy="{Binding IsBusy}"
                  ScrollViewer.VerticalScrollBarVisibility="Auto">
+
+    <i:Interaction.Behaviors>
+      <behaviors:ExecuteCommandOnKeyDownBehavior Key="LeftAlt" Command="{Binding EnableCoinControlCommand}" />
+    </i:Interaction.Behaviors>
+
     <c:ContentArea.Title>
       <DockPanel>
         <TextBlock Text="Preview Transaction" />
