fix dialog usage

--- a/WalletWasabi.Fluent/Views/Wallets/Send/TransactionPreviewView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Send/TransactionPreviewView.axaml
@@ -156,6 +156,14 @@
         </StackPanel>
       </DockPanel>
     </c:ContentArea.Title>
+    <DockPanel>
+      <Button IsVisible="{Binding IsCoinControlVisible}"
+              Command="{Binding ChangeCoinsCommand}"
+              Content="Review coins"
+              Margin="10 0"
+              VerticalAlignment="Center"
+              DockPanel.Dock="Bottom" />
+
     <Carousel Items="{Binding TransactionSummaries}" IsVirtualized="False"
               SelectedItem="{Binding DisplayedTransactionSummary}">
       <Carousel.PageTransition>
@@ -167,5 +175,6 @@
         </DataTemplate>
       </Carousel.ItemTemplate>
     </Carousel>
+    </DockPanel>
   </c:ContentArea>
 </UserControl>
