--- a/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/PrivacyControlTileView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/PrivacyControlTileView.axaml
@@ -2,21 +2,22 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:i="using:Avalonia.Xaml.Interactivity"
              xmlns:controls="clr-namespace:WalletWasabi.Fluent.Controls"
              xmlns:tiles="clr-namespace:WalletWasabi.Fluent.ViewModels.Wallets.Home.Tiles"
-             xmlns:tilesView="clr-namespace:WalletWasabi.Fluent.Views.Wallets.Home.Tiles"
-             xmlns:behaviors="using:WalletWasabi.Fluent.Behaviors"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+             xmlns:privacyBar="clr-namespace:WalletWasabi.Fluent.Views.Wallets.Home.Tiles.PrivacyBar"
+             mc:Ignorable="d" d:DesignWidth="320" d:DesignHeight="140"
              x:CompileBindings="True" x:DataType="tiles:PrivacyControlTileViewModel"
              x:Class="WalletWasabi.Fluent.Views.Wallets.Home.Tiles.PrivacyControlTileView">
-  <controls:TileControl TileSize="{Binding CurrentTileSize}">
-    <DockPanel>
-      <TextBlock Text="PRIVACY PROGRESS" DockPanel.Dock="Top" Classes="h8 bold" />
 
-      <StackPanel DockPanel.Dock="Bottom" Height="25" Spacing="8" IsVisible="{Binding HasPrivateBalance}">
+  <UserControl.Styles>
+    <StyleInclude Source="avares://WalletWasabi.Fluent/Views/Wallets/Home/Tiles/CommonStyles.axaml" />
+  </UserControl.Styles>
+
+  <HeaderedContentControl Header="PRIVACY PROGRESS">
+    <DockPanel>
+      <StackPanel DockPanel.Dock="Bottom" IsVisible="{Binding HasPrivateBalance}">
         <Separator />
-        <StackPanel Opacity="0.8" Orientation="Horizontal" Spacing="10" HorizontalAlignment="Center">
+        <StackPanel Opacity="0.8" Orientation="Horizontal" Spacing="10" Margin="8" HorizontalAlignment="Center">
           <Border VerticalAlignment="Center" BorderThickness="1" CornerRadius="2"
                   BorderBrush="{StaticResource ButtonForeground}">
             <TextBlock
@@ -24,12 +25,11 @@
           </Border>
           <controls:PrivacyContentControl Classes="bold" NumberOfPrivacyChars="9"
                                           VerticalAlignment="Center"
-
                                           Content="{Binding BalancePrivateBtc}" />
         </StackPanel>
       </StackPanel>
 
-      <tilesView:PrivacyBar DockPanel.Dock="Bottom" />
+      <privacyBar:PrivacyBar DockPanel.Dock="Bottom" />
 
       <StackPanel VerticalAlignment="Center" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 3">
 
@@ -45,5 +45,5 @@
           Text="{Binding PercentText}" Classes="h2" />
       </StackPanel>
     </DockPanel>
-  </controls:TileControl>
+  </HeaderedContentControl>
 </UserControl>
