--- a/WalletWasabi.Fluent/Views/Wallets/WalletView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/WalletView.axaml
@@ -80,42 +80,7 @@
       </StackPanel>
     </c:ContentArea.Title>
     <DockPanel Name="Panel" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
-      <i:Interaction.Behaviors>
-        <behaviors:BoundsObserverBehavior Bounds="{Binding #Panel.Bounds, Mode=OneWay}"
-                                          Width="{Binding WidthSource, Mode=TwoWay}"
-                                          Height="{Binding HeightSource, Mode=TwoWay}"
-                                          x:CompileBindings="False" />
-      </i:Interaction.Behaviors>
-      <Panel Classes.smallLayout="{Binding IsSmallLayout}"
-             Classes.normalLayout="{Binding IsNormalLayout}"
-             Classes.wideLayout="{Binding IsWideLayout}"
-             Classes.isTransactionHistoryEmpty="{Binding IsTransactionHistoryEmpty}">
-        <Panel.Styles>
-          <Style Selector="Panel.smallLayout">
-            <Setter Property="HorizontalAlignment" Value="Left" />
-            <Setter Property="VerticalAlignment" Value="Top" />
-            <Setter Property="Margin" Value="0,0,0,11" />
-            <Setter Property="(DockPanel.Dock)" Value="Top" />
-          </Style>
-          <Style Selector="Panel.normalLayout">
-            <Setter Property="HorizontalAlignment" Value="Stretch" />
-            <Setter Property="VerticalAlignment" Value="Top" />
-            <Setter Property="Margin" Value="0,0,0,11" />
-            <Setter Property="(DockPanel.Dock)" Value="Top" />
-          </Style>
-          <Style Selector="Panel.wideLayout">
-            <Setter Property="HorizontalAlignment" Value="Left" />
-            <Setter Property="VerticalAlignment" Value="Stretch" />
-            <Setter Property="Margin" Value="0,0,11,0" />
-            <Setter Property="(DockPanel.Dock)" Value="Left" />
-          </Style>
-          <Style Selector="Panel.isTransactionHistoryEmpty">
-            <Setter Property="HorizontalAlignment" Value="Stretch" />
-            <Setter Property="VerticalAlignment" Value="Stretch" />
-          </Style>
-        </Panel.Styles>
-        <home:WalletTiles />
-      </Panel>
+      <home:TilesView DataContext="{Binding Tiles}" Margin="0 10 0 20" DockPanel.Dock="Top" />
       <history:HistoryTable Name="HistoryTable"
                             DataContext="{Binding History}"
                             HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
