--- a/WalletWasabi.Fluent/Views/Wallets/Home/History/Columns/IndicatorsColumnView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/History/Columns/IndicatorsColumnView.axaml
@@ -47,7 +47,7 @@
                   IsVisible="{Binding !IsCoinJoin}" />
         <Panel IsVisible="{Binding IsCoinJoin}">
           <PathIcon IsVisible="{Binding !IsCoinJoinGroup}" ToolTip.Tip="Coinjoin" Data="{StaticResource shield_regular}" Height="15" Opacity="0.6" />
-          <PathIcon IsVisible="{Binding IsCoinJoinGroup}" ToolTip.Tip="Coinjoin" Data="{StaticResource double_shield_regular}" Height="15" Opacity="0.6" />
+          <PathIcon IsVisible="{Binding IsCoinJoinGroup}" ToolTip.Tip="Coinjoins" Data="{StaticResource double_shield_regular}" Height="15" Opacity="0.6" />
         </Panel>
       </Panel>
     </c:PrivacyContentControl>
