--- a/WalletWasabi.Fluent/Styles/Styles.axaml
+++ b/WalletWasabi.Fluent/Styles/Styles.axaml
@@ -35,4 +35,5 @@
   <StyleInclude Source="avares://WalletWasabi.Fluent/Styles/ToggleSwitch.axaml" />
   <StyleInclude Source="avares://WalletWasabi.Fluent/Styles/ScrollViewer.axaml" />
   <StyleInclude Source="avares://WalletWasabi.Fluent/Styles/CuedScrollViewer.axaml" />
+  <StyleInclude Source="avares://WalletWasabi.Fluent/Styles/HeaderedContentControl.axaml" />
 </Styles>
