--- a/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/BtcPriceTileView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/BtcPriceTileView.axaml
@@ -4,15 +4,16 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="using:WalletWasabi.Fluent.ViewModels.Wallets.Home.Tiles"
              xmlns:converters="clr-namespace:WalletWasabi.Fluent.Converters"
+             xmlns:controls="clr-namespace:WalletWasabi.Fluent.Controls"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:CompileBindings="True" x:DataType="vm:BtcPriceTileViewModel"
              x:Class="WalletWasabi.Fluent.Views.Wallets.Home.Tiles.BtcPriceTileView">
 
-  <HeaderedContentControl Header="EXCHANGE RATE" Classes="tile">
+  <controls:TileControl Title="EXCHANGE RATE" IsBottomContentVisible="False">
     <TextBlock Margin="0 3"
                Classes="h2 monoSpaced"
                VerticalAlignment="Center" HorizontalAlignment="Center"
                TextAlignment="Center"
                Text="{Binding UsdPerBtc^, Converter={x:Static converters:MoneyConverters.ToUsd}}" />
-  </HeaderedContentControl>
+  </controls:TileControl>
 </UserControl>
