--- a/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/PrivacyControlTileView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/PrivacyControlTileView.axaml
@@ -2,44 +2,44 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:controls="clr-namespace:WalletWasabi.Fluent.Controls"
              xmlns:tiles="clr-namespace:WalletWasabi.Fluent.ViewModels.Wallets.Home.Tiles"
+             xmlns:c="clr-namespace:WalletWasabi.Fluent.Controls"
              xmlns:privacyBar="clr-namespace:WalletWasabi.Fluent.Views.Wallets.Home.Tiles.PrivacyBar"
-             mc:Ignorable="d" d:DesignWidth="320" d:DesignHeight="140"
+             mc:Ignorable="d" d:DesignWidth="310" d:DesignHeight="140"
              x:CompileBindings="True" x:DataType="tiles:PrivacyControlTileViewModel"
              x:Class="WalletWasabi.Fluent.Views.Wallets.Home.Tiles.PrivacyControlTileView">
 
-  <HeaderedContentControl Header="PRIVACY PROGRESS" Classes="tile">
-    <DockPanel>
-      <StackPanel DockPanel.Dock="Bottom" IsVisible="{Binding HasPrivateBalance}">
-        <Separator />
-        <StackPanel Opacity="0.8" Orientation="Horizontal" Spacing="10" Margin="8" HorizontalAlignment="Center">
-          <Border VerticalAlignment="Center" BorderThickness="1" CornerRadius="2"
-                  BorderBrush="{StaticResource ButtonForeground}">
-            <TextBlock
-              Text="PRIVATE" Classes="bold" Margin="4 2 " VerticalAlignment="Center" HorizontalAlignment="Center" />
-          </Border>
-          <controls:PrivacyContentControl Classes="bold" NumberOfPrivacyChars="9"
-                                          VerticalAlignment="Center"
-                                          Content="{Binding BalancePrivateBtc}" />
-        </StackPanel>
-      </StackPanel>
 
-      <privacyBar:PrivacyBar DockPanel.Dock="Bottom" />
+  <c:TileControl Title="PRIVACY PROGRESS">
 
-      <StackPanel VerticalAlignment="Center" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 3">
+    <DockPanel VerticalAlignment="Bottom">
+      <privacyBar:PrivacyBar Margin="0 10 0 0" DockPanel.Dock="Bottom" />
+      <StackPanel Margin="0 10 0 0" Orientation="Horizontal" HorizontalAlignment="Center">
 
         <Button Command="{Binding ShowDetailsCommand}" Classes="plain"
-                ToolTip.Tip="Show Details" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0 0 10 0"
+                ToolTip.Tip="Show Details" VerticalAlignment="Center" HorizontalAlignment="Center"
                 Height="36" Width="36">
           <Image Source="{StaticResource privacy_indicator_good}" />
         </Button>
-
         <TextBlock
-          VerticalAlignment="Center" HorizontalAlignment="Center"
+          HorizontalAlignment="Center"
           TextAlignment="Center"
           Text="{Binding PercentText}" Classes="h2" />
       </StackPanel>
     </DockPanel>
-  </HeaderedContentControl>
+
+    <c:TileControl.BottomContent>
+      <StackPanel Opacity="0.8" Orientation="Horizontal" Spacing="10" HorizontalAlignment="Center">
+        <Border VerticalAlignment="Center" BorderThickness="1" CornerRadius="2"
+                BorderBrush="{StaticResource ButtonForeground}">
+          <TextBlock
+            Text="PRIVATE" Classes="bold" Margin="4 2" VerticalAlignment="Center" HorizontalAlignment="Center" />
+        </Border>
+        <c:PrivacyContentControl Classes="bold" NumberOfPrivacyChars="9"
+                                        VerticalAlignment="Center"
+                                        Content="{Binding BalancePrivateBtc}" />
+      </StackPanel>
+    </c:TileControl.BottomContent>
+  </c:TileControl>
+
 </UserControl>
