--- a/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/WalletBalanceTileView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/WalletBalanceTileView.axaml
@@ -2,28 +2,26 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:controls="clr-namespace:WalletWasabi.Fluent.Controls"
+             xmlns:c="clr-namespace:WalletWasabi.Fluent.Controls"
              xmlns:converters="clr-namespace:WalletWasabi.Fluent.Converters"
+             xmlns:tiles="clr-namespace:WalletWasabi.Fluent.ViewModels.Wallets.Home.Tiles"
              mc:Ignorable="d" d:DesignWidth="320" d:DesignHeight="140"
+             x:CompileBindings="True"
+             x:DataType="tiles:WalletBalanceTileViewModel"
              x:Class="WalletWasabi.Fluent.Views.Wallets.Home.Tiles.WalletBalanceTileView">
 
-  <HeaderedContentControl Header="BALANCE" Classes="tile">
-    <DockPanel>
-      <StackPanel DockPanel.Dock="Bottom" Spacing="8" IsVisible="{Binding HasBalance^}">
-        <Separator />
-        <controls:PrivacyContentControl Classes="bold monoSpaced" NumberOfPrivacyChars="9" Margin="4"
-                                        VerticalAlignment="Center"
-                                        HorizontalAlignment="Center"
-                                        Opacity="0.8"
-                                        Content="{Binding BalanceFiat^, Converter={x:Static converters:MoneyConverters.ToUsdAproxBetweenParens}}" />
-      </StackPanel>
+  <c:TileControl Title="BALANCE" IsBottomContentVisible="{Binding HasBalance^}" SeparatorMargin="0 0 0 6">
 
-      <Viewbox Margin="0 3" VerticalAlignment="Center" MaxHeight="40">
-        <controls:PrivacyContentControl NumberOfPrivacyChars="16"
-                                        Classes="h2 monoSpaced"
-                                        HorizontalContentAlignment="Center"
-                                        Content="{Binding BalanceBtc^}" />
-      </Viewbox>
-    </DockPanel>
-  </HeaderedContentControl>
+    <Viewbox Margin="0 3" VerticalAlignment="Center" MaxHeight="40">
+      <c:PrivacyContentControl NumberOfPrivacyChars="16" Classes="h2 monoSpaced" HorizontalContentAlignment="Center"
+                               Content="{Binding BalanceBtc^}" />
+    </Viewbox>
+
+    <c:TileControl.BottomContent>
+      <c:PrivacyContentControl Classes="bold monoSpaced" NumberOfPrivacyChars="9" Margin="4" VerticalAlignment="Center"
+                               HorizontalAlignment="Center" Opacity="0.8"
+                               Content="{Binding BalanceFiat^, Converter={x:Static converters:MoneyConverters.ToUsdAproxBetweenParens}}" />
+    </c:TileControl.BottomContent>
+
+  </c:TileControl>
 </UserControl>
