--- a/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/PrivacyControlTileView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/PrivacyControlTileView.axaml
@@ -2,18 +2,18 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:tiles="clr-namespace:WalletWasabi.Fluent.ViewModels.Wallets.Home.Tiles"
+             xmlns:vms="clr-namespace:WalletWasabi.Fluent.ViewModels.Wallets.Home.Tiles"
              xmlns:c="clr-namespace:WalletWasabi.Fluent.Controls"
-             xmlns:privacyBar="clr-namespace:WalletWasabi.Fluent.Views.Wallets.Home.Tiles.PrivacyBar"
+             xmlns:views="clr-namespace:WalletWasabi.Fluent.Views.Wallets.Home.Tiles"
              mc:Ignorable="d" d:DesignWidth="310" d:DesignHeight="140"
-             x:CompileBindings="True" x:DataType="tiles:PrivacyControlTileViewModel"
+             x:CompileBindings="True" x:DataType="vms:PrivacyControlTileViewModel"
              x:Class="WalletWasabi.Fluent.Views.Wallets.Home.Tiles.PrivacyControlTileView">
 
 
   <c:TileControl Title="PRIVACY PROGRESS">
 
     <DockPanel VerticalAlignment="Bottom">
-      <privacyBar:PrivacyBar Margin="0 10 0 0" DockPanel.Dock="Bottom" />
+      <views:PrivacyBar Margin="0 10 0 0" DockPanel.Dock="Bottom" />
       <StackPanel Margin="0 10 0 0" Orientation="Horizontal" HorizontalAlignment="Center">
         <Button Command="{Binding ShowDetailsCommand}" Classes="plain"
                 ToolTip.Tip="Show Details" VerticalAlignment="Center" HorizontalAlignment="Center"
