--- a/WalletWasabi.Fluent/Views/Wallets/Home/TilesView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/TilesView.axaml
@@ -2,8 +2,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:viewModels1="clr-namespace:WalletWasabi.Fluent.ViewModels"
+             xmlns:collections="clr-namespace:System.Collections;assembly=System.Runtime"
              mc:Ignorable="d" d:DesignWidth="800"
-             x:Class="WalletWasabi.Fluent.Views.Wallets.Home.TilesView">
+             x:Class="WalletWasabi.Fluent.Views.Wallets.Home.TilesView"
+             x:CompileBindings="True"
+             x:DataType="collections:IEnumerable">
 
   <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Disabled">
 
@@ -12,7 +16,7 @@
         <Style Selector="ContentPresenter">
           <Setter Property="ContentTemplate">
             <Setter.Value>
-              <DataTemplate>
+              <DataTemplate DataType="viewModels1:ActivatableViewModel">
                 <Border
                   CornerRadius="2" BorderThickness="1"
                   Background="{DynamicResource TileRegionColor}"
