--- a/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/PrivacyBar/PrivacyBar.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/PrivacyBar/PrivacyBar.axaml
@@ -6,7 +6,7 @@
              xmlns:behaviors="using:WalletWasabi.Fluent.Behaviors"
              xmlns:tiles="clr-namespace:WalletWasabi.Fluent.ViewModels.Wallets.Home.Tiles"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="WalletWasabi.Fluent.Views.Wallets.Home.Tiles.PrivacyBar.PrivacyBar"
+             x:Class="WalletWasabi.Fluent.Views.Wallets.Home.Tiles.PrivacyBar"
              x:CompileBindings="True" x:DataType="tiles:PrivacyControlTileViewModel">
   <Panel x:Name="Panel">
     <i:Interaction.Behaviors>
