--- a/WalletWasabi.Fluent/Views/AddWallet/WelcomePageView.axaml
+++ b/WalletWasabi.Fluent/Views/AddWallet/WelcomePageView.axaml
@@ -157,7 +157,7 @@
                 Non-custodial
               </TextBlock>
               <TextBlock Classes="text">
-                Only you are in full control of your money. Nobody can steal it from you.
+                Only you are in full control of your money, nobody can steal it from you.
               </TextBlock>
               <TextBlock Classes="title2">
                 Private by default
