--- a/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/PrivacyControlTileView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/PrivacyControlTileView.axaml
@@ -10,11 +10,20 @@
              x:Class="WalletWasabi.Fluent.Views.Wallets.Home.Tiles.PrivacyControlTileView">
 
 
-  <c:TileControl Title="PRIVACY PROGRESS">
+  <c:TileControl Title="PRIVACY PROGRESS" IsBottomContentVisible="{Binding HasPrivateBalance}">
 
-    <DockPanel VerticalAlignment="Bottom">
-      <views:PrivacyBar Margin="0 10 0 0" DockPanel.Dock="Bottom" />
-      <StackPanel Margin="0 10 0 0" Orientation="Horizontal" HorizontalAlignment="Center">
+    <c:TileControl.Styles>
+      <Style Selector="DockPanel.bottomAligned">
+        <Setter Property="VerticalAlignment" Value="Bottom"/>
+      </Style>
+      <Style Selector="DockPanel.centerAligned">
+        <Setter Property="VerticalAlignment" Value="Center"/>
+      </Style>
+    </c:TileControl.Styles>
+
+    <DockPanel Classes.bottomAligned="{Binding HasPrivateBalance}" Classes.centerAligned="{Binding !HasPrivateBalance}">
+      <views:PrivacyBar Margin="0 10 0 0" />
+      <StackPanel Margin="0 10 0 0" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="6">
         <Button Command="{Binding ShowDetailsCommand}" Classes="plain"
                 ToolTip.Tip="Show Details" VerticalAlignment="Center" HorizontalAlignment="Center"
                 Height="36" Width="36">
