--- a/WalletWasabi.Fluent/Views/Shell/Shell.axaml
+++ b/WalletWasabi.Fluent/Views/Shell/Shell.axaml
@@ -7,10 +7,10 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="459"
              x:DataType="vm:MainViewModel"
              x:CompileBindings="True"
-             x:Class="WalletWasabi.Fluent.Views.Shell.ShellView">
+             x:Class="WalletWasabi.Fluent.Views.Shell.Shell">
   <Panel>
-    <shell:BackgroundView />
+    <shell:Background />
     <shell:MainView x:CompileBindings="False" IsHitTestVisible="{Binding $parent.DataContext.IsMainContentEnabled^, FallbackValue=True}" />
-    <shell:DialogsView />
+    <shell:Dialogs />
   </Panel>
 </UserControl>
