--- a/WalletWasabi.Fluent/Views/Shell/TitleBar.axaml
+++ b/WalletWasabi.Fluent/Views/Shell/TitleBar.axaml
@@ -6,7 +6,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:shell="clr-namespace:WalletWasabi.Fluent.Views.Shell"
              mc:Ignorable="d" d:DesignWidth="1000"
-             x:Class="WalletWasabi.Fluent.Views.Shell.TitleBarView"
+             x:Class="WalletWasabi.Fluent.Views.Shell.TitleBar"
              x:Name="UserControl">
 
   <UserControl.Styles>
@@ -49,7 +49,7 @@
     </DataTemplate>
 
     <DataTemplate x:Key="SearchBar">
-      <searchBar:SearchBar DataContext="{Binding #UserControl.DataContext.SearchBar}" VerticalAlignment="Stretch"
+      <searchBar:SearchBarView DataContext="{Binding #UserControl.DataContext.SearchBar}" VerticalAlignment="Stretch"
                            HorizontalAlignment="Stretch"
                            Margin="5" />
     </DataTemplate>
@@ -74,7 +74,7 @@
 
         <ContentControl Grid.Column="3" ContentTemplate="{StaticResource SearchBar}" />
 
-        <shell:NetworkBadgeView VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0 0 8 0" Grid.Column="4" />
+        <shell:NetworkBadge VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0 0 8 0" Grid.Column="4" />
 
       </Grid>
     </DataTemplate>
@@ -98,7 +98,7 @@
 
         <ContentControl Grid.Column="3" ContentTemplate="{StaticResource SearchBar}" />
 
-        <shell:NetworkBadgeView VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0 0 8 0" Grid.Column="4" />
+        <shell:NetworkBadge VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0 0 8 0" Grid.Column="4" />
 
       </Grid>
     </DataTemplate>
@@ -125,7 +125,7 @@
           </Panel>
         </DockPanel>
         <ContentControl Grid.Column="2" ContentTemplate="{StaticResource SearchBar}" />
-        <shell:NetworkBadgeView Margin="10,0,10,0" Grid.Column="3" />
+        <shell:NetworkBadge Margin="10,0,10,0" Grid.Column="3" />
       </Grid>
     </DataTemplate>
   </UserControl.Resources>
