--- a/WalletWasabi.Fluent/Views/StatusIcon/StatusIconView.axaml
+++ b/WalletWasabi.Fluent/Views/StatusIcon/StatusIconView.axaml
@@ -11,7 +11,7 @@
              mc:Ignorable="d" d:DesignWidth="671" d:DesignHeight="32"
              x:DataType="statusIcon:StatusIconViewModel"
              x:CompileBindings="True"
-             x:Class="WalletWasabi.Fluent.Views.StatusIcon.StatusIcon">
+             x:Class="WalletWasabi.Fluent.Views.StatusIcon.StatusIconView">
   <UserControl.Styles>
 
     <Style Selector="PathIcon">
@@ -82,7 +82,7 @@
               <c:StatusItem.Icon>
                 <Panel>
                   <PathIcon Data="{StaticResource tor_icon}" IsVisible="{Binding !TorIssues.Count, FallbackValue=True}" />
-                  <st:TorIssuesControl IsVisible="{Binding TorIssues.Count, FallbackValue=False}" />
+                  <st:TorIssues IsVisible="{Binding TorIssues.Count, FallbackValue=False}" />
                 </Panel>
               </c:StatusItem.Icon>
             </c:StatusItem>
