--- a/WalletWasabi.Fluent/Views/StatusIcon/TorIssues.axaml
+++ b/WalletWasabi.Fluent/Views/StatusIcon/TorIssues.axaml
@@ -5,7 +5,7 @@
              xmlns:statusIcon="clr-namespace:WalletWasabi.Fluent.ViewModels.StatusIcon"
              xmlns:tor="clr-namespace:WalletWasabi.Tor.StatusChecker;assembly=WalletWasabi"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="WalletWasabi.Fluent.Views.StatusIcon.TorIssuesControl"
+             x:Class="WalletWasabi.Fluent.Views.StatusIcon.TorIssues"
              x:CompileBindings="True"
              x:DataType="statusIcon:IStatusIconViewModel">
 
