--- a/WalletWasabi.Fluent/Views/AddWallet/WelcomePageView.axaml
+++ b/WalletWasabi.Fluent/Views/AddWallet/WelcomePageView.axaml
@@ -154,7 +154,7 @@
                   Bitcoin wallet
                 </TextBlock>
                 <TextBlock Classes="text">
-                  You can easily receive and send money with it, securely and privately.
+                  Receive and send money, privately and securely.
                 </TextBlock>
                 <TextBlock Classes="title2">
                   Non-custodial
