Add corrected text

--- a/WalletWasabi.Fluent/Views/AddWallet/WelcomePageView.axaml
+++ b/WalletWasabi.Fluent/Views/AddWallet/WelcomePageView.axaml
@@ -188,7 +188,7 @@
                 Private by default
               </TextBlock>
               <TextBlock Classes="text">
-                Nobody can find out how much money you have or where you spend it.
+                Because your transactions are nobody else's business.
               </TextBlock>
               <TextBlock Classes="title2">
                 Open Source
